Added a handler for deleting a resource. The resource is deleted but the tag isn't
