# pkg/handler/handler.go
@@ -10,9 +10,13 @@ type Handler struct {
 	versionHandler
 }
 
-func New(getResourcesUsecase usecase.GetResources, createResourceUsecase usecase.CreateResource, logger *zap.Logger) *Handler {
+func New(
+	getResourcesUsecase usecase.GetResources,
+	createResourceUsecase usecase.CreateResource,
+	deleteResourceUsecase usecase.DeleteResource,
+	logger *zap.Logger) *Handler {
 	return &Handler{
-		resourcesHandler: *newResourcesHandler(getResourcesUsecase, createResourceUsecase, logger),
+		resourcesHandler: *newResourcesHandler(getResourcesUsecase, createResourceUsecase, deleteResourceUsecase, logger),
 		versionHandler:   *newVersionHandler(),
 	}
 }
